Apache NetBeans 20 was released on December 1, 2023: https://github.com/apache/netbeans/releases/tag/20